--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
 				width: 1440px;
 				height: 742px;
 			}
+			#dvd{
+				width: 300px;
+				height: 300px;
+				background-color: white;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-webkit-transform: translate(-50%, -50%);
+				   -moz-transform: translate(-50%, -50%);
+				    -ms-transform: translate(-50%, -50%);
+				     -o-transform: translate(-50%, -50%);
+				        transform: translate(-50%, -50%);
+				        /*z-index: 1000;*/
+
+			}
 		</style>
 	<style type="text/css"></style></head>
 	<body cz-shortcut-listen="true">
-
+		<div id="dvd">
+			
+		</div>
 		<script src="js/three.min.js"></script>
 		<script src="js/ThreeJsUtils.js"></script>
 		<script src="js/Target.js"></script>
